Colaboratory を使用して作成しました

--- a/Latent_Me.ipynb
+++ b/Latent_Me.ipynb
@@ -55,20 +55,40 @@
       "metadata": {
         "id": "frBc9Kl2ALv9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "ead78888-8b37-40f5-c040-c891a48d3ebf"
       },
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/Puzer/stylegan"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'stylegan'...\n",
+            "remote: Enumerating objects: 105, done.\u001b[K\n",
+            "remote: Total 105 (delta 0), reused 0 (delta 0), pack-reused 105\u001b[K\n",
+            "Receiving objects: 100% (105/105), 10.24 MiB | 11.73 MiB/s, done.\n",
+            "Resolving deltas: 100% (35/35), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "RnWcHKIiAkAH",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "ea631b56-ce00-4f1a-dcf8-88d71c7bf725"
       },
       "cell_type": "code",
       "source": [
@@ -76,8 +96,28 @@
         "# Use the version this notebook was built with\n",
         "!git checkout c3fb250c65840c8837ded78e34485227755c2473"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/stylegan\n",
+            "Note: checking out 'c3fb250c65840c8837ded78e34485227755c2473'.\n",
+            "\n",
+            "You are in 'detached HEAD' state. You can look around, make experimental\n",
+            "changes and commit them, and you can discard any commits you make in this\n",
+            "state without impacting any branches by performing another checkout.\n",
+            "\n",
+            "If you want to create a new branch to retain commits you create, you may\n",
+            "do so (now or later) by using -b with the checkout command again. Example:\n",
+            "\n",
+            "  git checkout -b <new-branch-name>\n",
+            "\n",
+            "HEAD is now at c3fb250 Update README.md\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -257,7 +297,11 @@
       "metadata": {
         "id": "PVYrjvgE_8AU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "fd2cfa10-bea0-4ae2-a932-d2152d0caa5f"
       },
       "cell_type": "code",
       "source": [
@@ -269,8 +313,19 @@
         "\n",
         "generator = Generator(Gs_network, batch_size=1, randomize_noise=False)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading https://drive.google.com/uc?id=1MEGjdvVpUsu1jB4zrXZN7Y4kBBOzizDQ .... done\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Colocations handled automatically by placer.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -518,7 +573,11 @@
       "metadata": {
         "id": "iy5WrttdklM5",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b541650b-6026-4686-844d-6e114241abd8"
       },
       "cell_type": "code",
       "source": [
@@ -529,8 +588,16 @@
         "                                               src_seeds=[11,100,701,583], dst_seeds=[888,829,1898,1733,1614,845], \n",
         "                                               style_ranges=[range(1, 10)]*4)  # style_mixingのレンジ指定\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "results/style_mix.png\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
